2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstractions: GCMALLOC, GCFREE, GCRV

	* gi.h (GCMALLOC, GCFREE, GCRV): New macros.
	* libpq.c (xc_free): Use ‘GCFREE’, ‘GCRV’.
	(lob_name): New static var.
	(lob_mklobport): Use ‘GCMALLOC’, ‘lob_name’.
	(lob_free): Use ‘GCFREE’, ‘GCRV’.
	(pg_connectdb): Use ‘GCMALLOC’.
	(sepo_name): Move earlier in file, before ‘sepo_free’; nfc.
	(sepo_free): Don't keep track of size; use ‘free’ directly for
	internal strings; use ‘GCFREE’, ‘sepo_name’, ‘GCRV’.
	(pg_make_print_options): Use ‘GCMALLOC’.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Decruft: (Re)move some obsoleted macros.

	This undoes, in part, the sloggy 2011-06-02, "If
	necessary, #define SCM_{ROCHARS,ROLENGTH,ROUCHARS}".

	* gi.h (SCM_ROCHARS, SCM_ROLENGTH, SCM_ROUCHARS): Delete macros.
	(ROZT_X): Move from here...
	(ROZT): Delete macro.
	* libpq.c [GI_LEVEL_NOT_YET_1_8] (ROZT_X): ...to here.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: NEWCELL_X

	* gi.h (NEWCELL_X): New macro.
	* libpq.c (lob_mklobport): Use ‘NEWCELL_X’.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Specialize ‘pg-getlineasync’ internals for 1.8+.

	* libpq.c (pg_getlineasync) [!GI_LEVEL_NOT_YET_1_8]:
	Fill a temporary buffer then bytewise copy into the Scheme string.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Specialize C-byte-range finangling for Guile 1.8+.

	* libpq.c [!GI_LEVEL_NOT_YET_1_8] (REND, NUL_AT_END_X): New macros.
	(FINANGLABLE_SCHEME_STRING_FROM_SYMBOL, _FINANGLE, UNFINANGLE):
	Bifurcate macros, based on ‘GI_LEVEL_NOT_YET_1_8’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘FINANGLE’, ‘UNFINANGLE’ more.

	Omission from 2011-09-26, "Add abstractions
	to grok Scheme symbol/string as C byte range".

	* libpq.c (pg_mblen): Use ‘FINANGLE’, ‘UNFINANGLE’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Construct ‘pg-guile-pg-loaded’ rv dynamically; reduce linking.
